# AoE2_AI_Modder

./: .gitignore  AGENT_START_HERE.md  CODEOWNERS  CONTRIBUTING.md  GEMINI.md  GEMINI_TASKS.md  README.md  SECURITY.md  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/drafts/: github-index-readiness.md
.sisyphus/plans/: ai-xs-separation-xs-rag-publish.md  gitignore-strict-allowlist-core-plus-aoe2.md
AoE2_AI_Scripting_Guide/: 01_RULES_AND_SYNTAX.md  02_PLAYER_INTERACTION.md  03_MILITARY_CONTROL.md  04_MAP_MOVEMENT_AND_DUC.md  05_LLM_SAFE_WORKFLOW.md  06_LLM_COMMAND_ALLOWLIST.md  07_RETRIEVAL_INDEX.md  README.md  SOURCES.md
XS_Scripting/: XS_ARRAYS_PROJECT_GUIDE.md
XS_Training/: MODDING_GENERAL_NEW_DATA_FUNCTIONALITIES.md  RPG_SPELL_DESIGN_FOUNDATION.md  SOURCE_PAGE_INDEX.md  fetch_pages.py  fetch_single_page.py  manifest.json
XS_Training/modding_general/: 02_attributes.md  (+7 more)
docs/: README.md
examples/: README.md
tests/: test_agent_docs.py  test_boundaries.py  test_compact_retriever.py  test_genie_dat_retriever.py  test_genie_registry.py  test_knowledge_integration.py  test_knowledge_integration_unittest.py  test_manifest.py  test_unified_retrieval_eval.py  test_unified_retriever.py  test_xs_bridge_compat.py  test_xs_injector.py  test_xs_knowledge_build.py  test_xs_retrieval.py  test_xs_retrieval_eval.py
tools/: build_ai_scripting_knowledge.py  build_trigger_knowledge.py  build_xs_knowledge.py  check_boundaries.py  check_manifest.py  eval_design_brief_retrieval.py  eval_unified_retrieval.py  eval_xs_retrieval.py  generate_xs_array_injection_demo.py
(+134 files in other folders)
