[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoe2-ai-modder"
version = "0.1.0"
description = "AoE2:DE AI scripting and trigger knowledge tooling."
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"src.data.xs.agent_database" = ["*.json"]
"src.data.xs.xs_knowledge" = ["*.json", "*.jsonl"]
